--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "node-postgres": "^0.6.2",
     "pg": "^8.11.3",
     "supertest": "^6.3.3"
