hosting setup complete

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "be-nc-news",
   "version": "1.0.0",
   "description": "bc-nc-news",
-  "main": "index.js",
+  "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "node listen.js",
+    "seed-prod": "NODE_ENV=production npm run seed"
   },
   "repository": {
     "type": "git",
@@ -24,8 +26,7 @@
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "jest-sorted": "^1.0.14",
-    "pg-format": "^1.0.4"
+    "jest-sorted": "^1.0.14"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -33,7 +34,8 @@
     "fs": "^0.0.1-security",
     "node-postgres": "^0.6.2",
     "pg": "^8.11.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
