--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "be-nc-news",
+  "name": "news-api-project",
   "version": "1.0.0",
-  "description": "bc-nc-news",
+  "description": "News-API-Project",
   "main": "listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/northcoders/be-nc-news.git"
+    "url": "git+https://github.com/everydaycloud/news-project"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/northcoders/be-nc-news/issues"
+    "url": "https://github.com/everydaycloud/news-project/issues"
   },
-  "homepage": "https://github.com/northcoders/be-nc-news#readme",
+  "homepage": "https://github.com/everydaycloud/news-project#readme",
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
