--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -9,25 +9,22 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    
-test:
-  name: Run applications tests
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: npm ci
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
-    - name: Set env variables - db names nc_news_test
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Setup Postgres
-      uses: harmon758/postgresql-action@v1
-      with:
-        postgresql db: news_api_ci
-        postgresql user: news_user
-        postgresql password: news_password
+      - name: Set env variables - db names nc_news_test
 
-    - name: Run tests
-      run: PGDATABASE=news_api_ci PGUSER=news_user PGPASSWORD=news_password npm t
+      - name: Setup Postgres
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql-db: news_api_ci
+          postgresql-user: news_user
+          postgresql-password: news_password
+
+      - name: Run tests
+        run: PGDATABASE=news_api_ci PGUSER=news_user PGPASSWORD=news_password npm t
