--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Setup Postgres
         uses: harmon758/postgresql-action@v1
         with:
-          postgresql-db: news_api_ci
-          postgresql-user: news_user
-          postgresql-password: news_password
+          postgresql db: news_api_ci
+          postgresql user: news_user
+          postgresql password: news_password
 
       - name: Run tests
         run: PGDATABASE=news_api_ci PGUSER=news_user PGPASSWORD=news_password npm t
