--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "jest-sorted": "^1.0.14"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "node-postgres": "^0.6.2",
     "pg": "^8.11.3",
-    "supertest": "^6.3.3",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
